--- a/Challenge_2/Challenge_2_iOS/Base.lproj/Main.storyboard
+++ b/Challenge_2/Challenge_2_iOS/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TitleCellTableViewCell" id="Jje-ot-EyY" customClass="TitleCellTableViewCell" customModule="Challenge_2_iOS" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TitleCellTableViewCell" id="Jje-ot-EyY" customClass="TitleCellTableViewCell" customModule="Challenge_2_iOS" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="84.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jje-ot-EyY" id="WkJ-ED-A3S">
